<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin"
    tools:ignore="RtlHardcoded">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/fragment_payment_header" />

        <ViewFlipper
            android:id="@+id/flipper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inAnimation="@anim/tv_in"
            android:minHeight="?actionBarSize"
            android:outAnimation="@anim/tv_out">

            <Button
                android:id="@+id/pay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/action_pay" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:id="@+id/paid"
                    android:theme="@style/ThemeOverlay.AppTheme.Good"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_check"
                    android:text="@string/msg_paid" />

            </LinearLayout>

        </ViewFlipper>

    </LinearLayout>

</android.support.v7.widget.CardView>
